<?xml version="1.0" encoding="UTF-8"?>
<!--
 * Copyright 2018 Baloise Group
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<organization>
		<name>Open-Insurance</name>
		<url>https://open-insurance.org</url>
	</organization>

	<groupId>org.open.insurance.baloise</groupId>
	<artifactId>qa-ui-taf-gw</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<ciManagement>
		<system>Travis CI</system>
		<url>https://travis-ci.org/open-insurance/qa-ui-taf-gw</url>
	</ciManagement>

	<name>qa-ui-taf-gw-main</name>
	<url>https://github.com/open-insurance/qa-ui-taf-gw</url>

	<scm>
		<url>https://github.com/open-insurance/qa-ui-taf-gw.git</url>
		<connection>scm:git:git@github.com:open-insurance/qa-ui-taf-gw.git</connection>
		<tag>HEAD</tag>
	</scm>

	<repositories>
		<repository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<junit.jupiter.version>5.2.0</junit.jupiter.version>
		<junit.platform.version>1.2.0</junit.platform.version>
		<org.hamcrest.version>1.3</org.hamcrest.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
		</dependency>
		<dependency>
			<groupId>com.baloise.testing.framework</groupId>
			<artifactId>taf-browser</artifactId>
			<version>0.0.9-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.baloise.testing.framework</groupId>
			<artifactId>taf-browser-junit4-extensions</artifactId>
			<version>0.0.9-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
			</plugin>
			<!-- https://github.com/codecov/example-java-maven#produce-coverage-reports -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check />
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.16</version>
				<executions>
					<execution>
						<id>add-third-party</id>
						<goals>
							<goal>add-third-party</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>.</directory>
				<excludes>
					<exclude>target/</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
</project>
